# HyperDE

./: .gitignore  README.md  install.sh
Estilos/Waybar/: config  style.css
Estilos/Waybar/waybar_congfig/: CMakeLists.txt  WaybarConfig.cpp  WaybarConfig.h  main.cpp
Hyprland/: hyp
Styles/Hyprland/: hyp
Styles/StylesCode/: StyleCheckBox.qss
Styles/Waybar/: config_waybar.txt
Waybar/: way
src/: CMakeLists.txt  main.cpp
src/WaybarConfig/: WaybarConfig.cpp  WaybarConfig.h
